[package]
name = "tp1"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "tp1"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
ctrlc = { version = "3.0", features = ["termination"] }